tests/ui/object_next_fails_while_kv_live.stderr
error[E0499]: cannot borrow `obj` as mutable more than once at a time
  --> $DIR/object_next_fails_while_kv_live.rs:14:5
   |
12 |     let _kv = obj.next().unwrap();
   |               --- first mutable borrow occurs here
13 |
14 |     obj.next();
   |     ^^^ second mutable borrow occurs here
15 | }
   | - first borrow might be used here, when `_kv` is dropped and runs the `Drop` code for type `json_stream::parse::KeyVal`
